<resources>
    <string name="app_name">Be My Hero</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="add_new_post">Add New Post</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="or_login_with">or login with:</string>
    <string name="save">Save</string>
    <string name="please_wait_this_may_take_a_moment">Please wait! This may take a moment.</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="update_post">Update Post</string>
    <string name="new_post">Uploaded a post</string>
    <string name="post_description">Post description...</string>
    <string name="date_and_time">Date and Time</string>
    <string name="profile_status">Profile Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="relationship_status">Relationship Status</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="country">Country</string>
    <string name="full_name">Full Name</string>
    <string name="profile_name">Profile Name</string>
    <string name="search_friends">Search Friends</string>
    <string name="search">Search</string>
</resources>
