<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/settings_toolbar"
        layout="@layout/app_bar_layout">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="767dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/settings_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settings_profile_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile"/>

            <EditText
                android:id="@+id/settings_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_profile_image"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/inputs"
                android:hint="@string/profile_status"
                android:padding="20dp"
                android:textColor="#616161"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_status"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/inputs"
                android:hint="@string/full_name"
                android:padding="20dp"
                android:textColor="#616161"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_fullname"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/inputs"
                android:hint="@string/username"
                android:padding="20dp"
                android:textColor="#616161"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_username"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/inputs"
                android:hint="@string/country"
                android:padding="20dp"
                android:textColor="#616161"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_country"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/inputs"
                android:hint="@string/date_of_birth"
                android:padding="20dp"
                android:textColor="#616161"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_birthday"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/inputs"
                android:hint="@string/gender"
                android:padding="20dp"
                android:textColor="#616161"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_gender"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/inputs"
                android:hint="@string/relationship_status"
                android:padding="20dp"
                android:textColor="#616161"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/settings_update_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button"
                android:layout_below="@id/settings_relationship"
                android:text="@string/save_changes"
                android:backgroundTint="@android:color/darker_gray"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>