<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/friend_profile_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/profile"/>

            <TextView
                android:id="@+id/friend_profile_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:layout_below="@+id/friend_profile_image"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/friend_profile_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_below="@+id/friend_profile_full_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/friend_profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_status"
                android:layout_below="@+id/friend_profile_user_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/friend_profile_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:layout_below="@+id/friend_profile_status"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/friend_profile_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:layout_below="@+id/friend_profile_country"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/friend_profile_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_below="@+id/friend_profile_birthday"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/friend_profile_relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relationship_status"
                android:layout_below="@+id/friend_profile_gender"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
            
            <Button
                android:id="@+id/accept_friend_request_button"
                android:layout_width="140dp"
                android:layout_marginLeft="25dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/friend_profile_relationship"
                android:layout_marginTop="30dp"
                android:background="@drawable/inputs"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="Add Friend"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/decline_friend_request_button"
                android:layout_width="140dp"
                android:layout_marginLeft="30dp"
                android:layout_toEndOf="@+id/accept_friend_request_button"
                android:layout_height="wrap_content"
                android:layout_below="@id/friend_profile_relationship"
                android:layout_marginTop="30dp"
                android:background="@drawable/inputs"
                android:backgroundTint="@color/colorPrimary"
                android:text="Delete"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>