<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register">

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="194dp"
        android:layout_height="185dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="105dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_icon"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/register_create_account"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_confirm_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/create_account"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

</RelativeLayout>