<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".SetupActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="105dp"
        android:src="@drawable/profile" />

    <EditText
        android:id="@+id/setup_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_profile_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/username"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/username"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <EditText
        android:id="@+id/setup_user_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/name"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/full_name"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <EditText
        android:id="@+id/setup_country"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_user_fullname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/country"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/country"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <Button
        android:id="@+id/setup_save_button"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_below="@+id/setup_country"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="106dp"
        android:background="@drawable/button"
        android:padding="14dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>