<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/posts_border">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:padding="5dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/post_profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"
                android:layout_marginStart="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/post_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="5dp"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/post_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_post"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/post_date_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_and_time"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_description"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:padding="3dp"
            android:textSize="14sp"
            android:textColor="@android:color/tab_indicator_text"/>

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="3dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

    </LinearLayout>

</RelativeLayout>