<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="188dp"
        android:layout_height="141dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="112dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_icon"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="53dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="49dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/register_account_link"
        android:layout_width="315dp"
        android:layout_height="43dp"
        android:layout_below="@+id/login_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="48dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="#B52B2B"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_account_link"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="49dp"
        android:text="@string/or_login_with"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/facebook_signin_button"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/facebook">

        </ImageView>

        <ImageView
            android:id="@+id/twitter_signin_button"
            android:layout_width="125dp"
            android:layout_height="105dp"
            android:src="@drawable/twitter">

        </ImageView>

        <ImageView
            android:id="@+id/google_signin_button"
            android:layout_width="85dp"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/google">

        </ImageView>

    </LinearLayout>

</RelativeLayout>